Use flex and flex-wrap to get the correct  design and style button

--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
-.head-bar {
-    display:flex;
-    justify-content: space-around;
+body {
+    margin: 0;
+    padding: 0;
 }
 
 ul {
@@ -8,8 +8,18 @@ ul {
     gap: 10px;
 }
 
+.header {
+    background-color: #1F2937;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    padding: 70px;
+    padding-top: 10px;
+}
+
 ul {
     list-style: none;
+    justify-content: flex-end;
 }
 
 a {
@@ -21,4 +31,37 @@ a {
 .logo {
     font-size: 24px;
     color: #F9FAF8;
+    font-weight: bold;
+    padding-left: 13px;
 }
+
+.logo, ul, .main-text, .secondary-text {
+    width: 500px;
+}
+
+.main-text{
+    font-size: 48px;
+    font-weight: bolder;
+    color: #F9FAF8;
+    margin: 0;
+}
+
+.secondary-text {
+    font-size: 18px;
+    color: #E5E7EB;
+}
+
+.main-text, .img-1 {
+    margin-top: 40px;
+}
+
+.button {
+    background-color: #3882F6;
+    font-size: 22px;
+    color: #E5E7EB;
+    border-radius: 15%;
+    padding: 5px;
+    width: 125px;
+    font-weight: 600;
+}
+
